--- a/DynamicQuery/DynamicFilter/DynamicFilter.csproj
+++ b/DynamicQuery/DynamicFilter/DynamicFilter.csproj
@@ -5,4 +5,17 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Common\Helpers\INestedListsHelper.cs" />
+    <Compile Remove="Common\Helpers\NestedListsHelper.cs" />
+    <Compile Remove="Common\Helpers\OperationEqualityComparer.cs" />
+    <Compile Remove="Common\Helpers\OperationHelper.cs" />
+    <Compile Remove="Common\Helpers\PropertyIdHelper.cs" />
+    <Compile Remove="Operations\Operation.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Common\Helpers\" />
+  </ItemGroup>
+
 </Project>
