--- a/DynamicQuery/DynamicSelect/DynamicSelect.csproj
+++ b/DynamicQuery/DynamicSelect/DynamicSelect.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0" />
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.10" />
+  </ItemGroup>
+
 </Project>
