--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,10 +19,10 @@ jobs:
         dotnet-version: 3.1.x
     - name: Restore dependencies
       run: dotnet restore
-      working-directory: DynamicQuery/DynamicQuery/
+      working-directory: DynamicQuery/DynamicFilter/
     - name: Build
       run: dotnet build --no-restore
       working-directory: DynamicQuery/DynamicQuery/
     - name: Test
       run: dotnet test --no-build --verbosity normal
-      working-directory: DynamicQuery/DynamicQuery/Tests/
+      working-directory: DynamicQuery/Tests/
