--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,11 +18,9 @@ jobs:
       with:
         dotnet-version: 3.1.x
     - name: Restore dependencies
-      run: dotnet restore
-      working-directory: DynamicQuery/DynamicQuery.sln
+      run: dotnet restore DynamicQuery/
     - name: Build
-      run: dotnet build --no-restore
-      working-directory: DynamicQuery/DynamicQuery.sln
+      run: dotnet build DynamicQuery/DynamicQuery.sln --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
       working-directory: DynamicQuery/Tests/
