--- a/DynamicQuery/DynamicQuery/DynamicQuery.csproj
+++ b/DynamicQuery/DynamicQuery/DynamicQuery.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\DynamicFilter\DynamicFilter.csproj" />
     <ProjectReference Include="..\DynamicSelect\DynamicSelect.csproj" />
   </ItemGroup>
